<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.softdesign.skillbranch.iceandfirepedia.ui.activities.CharacterActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/ctl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/imageHouses"
                android:layout_width="match_parent"
                android:layout_height="540dp"

                android:fitsSystemWindows="true"
                android:scaleType="fitXY"
                android:src="@drawable/stark"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:theme="@style/ToolBarStyle"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal_16"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/character_info_image"/>

                <TextView
                    style="@style/character_info_descr.left"
                    android:text="@string/character_words"
                    />

                <TextView
                    android:id="@+id/words_tv"
                    style="@style/character_info_descr.right"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/character_info_image"/>

                <TextView
                    style="@style/character_info_descr.left"
                    android:text="@string/born"
                    />

                <TextView
                    android:id="@+id/born_tv"
                    style="@style/character_info_descr.right"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/character_info_image"/>

                <TextView
                    style="@style/character_info_descr.left"
                    android:text="@string/died"
                    />

                <TextView
                    android:id="@+id/died_tv"
                    style="@style/character_info_descr.right"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/character_info_image"/>

                <TextView
                    style="@style/character_info_descr.left"
                    android:text="@string/titles"

                    />

                <TextView
                    android:id="@+id/titles_tv"
                    android:inputType="textMultiLine"
                    style="@style/character_info_descr.right"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/character_info_image"/>

                <TextView
                    style="@style/character_info_descr.left"
                    android:text="@string/aliases"
                    />

                <TextView
                    android:id="@+id/aliases_tv"
                    style="@style/character_info_descr.right"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/spacing_larger_42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    style="@style/character_info_descr.left"
                    android:text="@string/father"

                    />

                <Button
                    android:id="@+id/father_btn"
                    style="@style/character_info_descr.right"
                    android:background="@color/colorPrimary"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="@dimen/spacing_larger_42"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    style="@style/character_info_descr.left"
                    android:text="@string/mother"

                    />

                <Button
                    android:id="@+id/mother_btn"

                    style="@style/character_info_descr.right"
                    android:background="@color/colorPrimary"

                    />

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
